# BattleTris

./: .gitignore  LICENSE  PORTING.md  README.md
rust/: .dockerignore  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.bot  README.md  WEAPONS.md  deploy-quiesce.sh  fly.bots.toml  fly.toml
rust/bt-ai/: Cargo.toml
rust/bt-ai/src/: ernie.rs  lib.rs  vs.rs  weapons.rs
rust/bt-ai/tests/: ai_properties.rs  bot_match.rs  characterization.rs  pbt.rs  vs_computer.rs  weapons_funds.rs  weapons_fuzz.rs  weapons_lifecycle.rs
rust/bt-bot/: Cargo.toml
rust/bt-bot/src/: main.rs  sync.rs
rust/bt-core/: Cargo.toml
rust/bt-core/src/: arsenal.rs  board.rs  cell.rs  constants.rs  game.rs  lib.rs  piece.rs  piece_manager.rs  rng.rs  spy.rs  versus.rs  weapons.rs
rust/bt-core/tests/: board_mechanics.rs  cross_player_serde.rs  differential_lineclear.rs  game_loop.rs  oracle.rs  pbt.proptest-regressions  pbt.rs  pbt_codec.rs  pbt_keyframe.rs  pbt_lineclear.rs  pbt_lockhash.rs  pbt_premature_end.proptest-regressions  pbt_premature_end.rs  pbt_robustness.rs  pbt_rotation.rs  pbt_versus.proptest-regressions  pbt_versus.rs  pbt_weapons.proptest-regressions  pbt_weapons.rs  weapons_game.rs  weapons_interactions.rs  weapons_oracle.rs  weapons_relay.rs
rust/bt-identity/: Cargo.toml
rust/bt-identity/src/: lib.rs
rust/bt-identity/tests/: pbt.proptest-regressions  pbt.rs
rust/bt-netcode/: Cargo.toml
rust/bt-netcode/src/: lib.rs
rust/bt-netcode/tests/: pbt_convergence.rs  pbt_divergence.rs  predictor_pbt.rs
rust/bt-replay/: Cargo.toml
rust/bt-replay/examples/: dump_replay.rs
rust/bt-replay/src/: lib.rs
rust/bt-replay/tests/: fuzz_replay.rs  pbt_replay.rs  weapon_showcase.rs
rust/bt-server/: Cargo.toml
rust/bt-server/proptest-regressions/: bout.txt
rust/bt-server/src/: bout.rs  identity.rs  main.rs  metrics.rs
rust/bt-trueskill/: Cargo.toml
rust/bt-trueskill/src/: lib.rs  math.rs  ts2.rs
rust/bt-trueskill/tests/: pbt.proptest-regressions  pbt.rs
rust/bt-wasm/: Cargo.toml  package-lock.json  package.json  playwright.config.js  tsconfig.json
rust/bt-wasm/src/: lib.rs
rust/bt-wasm/tests/: debug-picker.spec.js  weapon-deploy.spec.js
rust/bt-wasm/www/: .gitignore  dom-util.ts  index.html  leaderboard.html  leaderboard.js  leaderboard.ts  library.html  library.js  library.ts  main.js  main.ts  motif-dialog.ts  motif-scroll.js  motif-scroll.ts  motif.css  protocol.ts  render.js  render.ts  replay.html  replay.js  replay.ts  resync.test.ts  resync.ts  sound.js  sound.ts  spectate.html  spectate.js  spectate.ts  spy-degrade.test.ts  spy-degrade.ts  style.css  update-gag.test.ts  update-gag.ts
rust/docs/: architecture-netcode.md  building-and-running.md  deployment.md  engine.md  faithfulness.md  frontend.md  glossary.md  overview.md  quickstart.md  replays.md  testing.md  weapons.md
usr/src/: .make.state  BTConfig.H  BTConfig.H.bot  BTConfig.H.in  BTConfig.H.top  Makefile  Makeinclude  Makeinclude.in  acconfig.h  config.cache  config.status  configure  configure.in  cscope.files  cscope.out
usr/src/SCCS/: p.BTConfig.H  p.Makeinclude  s.BTConfig.H  s.BTConfig.H.bot  s.BTConfig.H.in  s.BTConfig.H.top  s.Makefile  s.Makeinclude  s.Makeinclude.in  s.acconfig.h  s.config.cache  s.config.status  s.configure  s.configure.in
usr/src/art/: btbazaar.ppm  btbiff1.ppm  btbiff3.ppm  btbiff4.ppm  btchalbiff.ppm  btchalbiff.xpm  btchallbiff.xpm  btchalmask.xbm  btchalmask.xbm.old  btchalmask.xpm  btchalmask2.xbm  btgimp.ppm  btgimp2.ppm  btsleepbiff.ppm  btsleepbiff.xbm  btsleepbiff.xpm  btsleepmask.xbm  btstartup2.ppm  bttitle.ppm  dummy.ppm  sdssmall.ppm
usr/src/audio/: .make.state  DevAudio.C  Makefile
usr/src/btref/: .make.state  Makefile  btcmds.C  btcmds.H  btcmdtab.C  btcmdtab.H  btglob.C  btglob.H  btref  btref.C  btref.H  btsignals.H
usr/src/daemons/: .make.state  BTDBServer.C  BTDBServer.H  BTMDSignals.H  BTMDSlave.C  BTMDSlave.H  BTSDClient.C  BTSDClient.H  BTSDSignals.H  BTServer.C  BTServer.H  BTSlave.C  BTSlave.H  Makefile  btserver.cf  btserverd  btserverd.C  btserverd.H  btslaved  btslaved.C  btslaved.H
usr/src/db/: .make.state  BTConfigFile.C  BTConfigFile.H  BTDB.C  BTDB.H  BTDBErr.C  BTDBLock.C  BTDBRecord.C  BTDBRecord.H  BTDBWriteLock.H  BTGameStats.C  BTNetworkEntry.C  BTNetworkEntry.H  BTPlayer.C  BTPlayer.H  BTPlayerRecord.C  BTPlayerRecord.H  Makefile  ParsedFile.C  ParsedFile.H
usr/src/game/: .del-BTArmor.s-Oct-20-01  .gdb_history  .make.state  BTAbout.C  BTAbout.H  BTArsenal.C  BTArsenal.H  BTBazaar.C  BTBazaar.H  BTBiff.C  BTBiff.H  BTBoard.C  BTBoard.H  BTBoardManager.C  BTBoardManager.H  BTBox.C  BTBox.H  BTCBoard.C  BTCBoard.H  BTChallenge.C  BTChallenge.H  BTChallengeDialog.C  BTChallengeDialog.H  BTCommManager.C  BTCommManager.H  BTComputer.C  BTComputer.H  BTDirs.H.in  BTFallbacks.C  BTGame.C  BTGame.H  BTLine.H  BTList.C  BTList.H  BTMove.H  BTMovePath.H  BTNetManager.C  BTNetManager.H  BTPiece.C  BTPiece.H  (+34 more)
usr/src/man/: BattleTris.1  btref.1
usr/src/share/: BattleTris.ad  Makefile  btweapons.db  btweaponsp.db
usr/src/signals/: .make.state  Makefile  SigReceiver.C  SigReceiver.H
usr/src/sockets/: .make.state  Address.C  Address.H  Makefile  PacketBuffer.C  PacketBuffer.H  Socket.C  Socket.H  SocketCB.H  StreamSocket.C  StreamSocket.H  StreamSocketErr.C  XtSocketCB.C
usr/src/stdlib/: .make.state  AbsList.C  AbsList.H  AbsListElement.C  AbsListElement.H  AbsListIter.C  AbsListIter.H  Block.C  Block.H  List.C  ListElement.C  ListIter.C  Makefile  RWListIter.H
usr/src/widget/: .make.state  BTDisplay.C  BTDisplay.H  BTDrawingAreaWidget.C  BTDrawingAreaWidget.H  BTFormWidget.C  BTFormWidget.H  BTFrameWidget.C  BTLabelWidget.C  BTLabelWidget.H  BTMessageDlog.C  BTMessageDlog.H  BTPalette.H  BTPixmap.C  BTPushButtonWidget.C  BTPushButtonWidget.H  BTRowColumnWidget.C  BTRowColumnWidget.H  BTScrolledListWidget.C  BTScrolledTextWidget.C  BTSliderWidget.C  BTSliderWidget.H  BTTextWidget.C  BTTextWidget.H  BTWidget.C  BTWidget.H  BTXColor.H  BTXDisplay.C  BTXDisplay.H  BTXPalette.C  BTXPalette.H  (+4 more)
(+322 files in other folders)
