[workspace]
resolver = "2"
members = [
    "bt-core",
    "bt-trueskill",
    "bt-ai",
    "bt-replay",
    "bt-identity",
    "bt-netcode",
    "bt-wasm",
    "bt-server",
    "bt-bot",
]
# bt-wasm only targets wasm32 (cdylib + wasm-bindgen); keep it out of the
# default host build/test so `cargo test` works without the wasm toolchain.
default-members = [
    "bt-core",
    "bt-trueskill",
    "bt-ai",
    "bt-replay",
    "bt-identity",
    "bt-netcode",
]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["BattleTris port"]

# A faithful Rust port of BattleTris (Brown CS32, 1994) targeting WASM/browser,
# with TrueSkill 2 matchmaking. See PORTING.md and the C++ source under usr/src/.
[profile.release]
opt-level = 3
lto = true
