[package]
name = "bt-ai"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "BattleTris computer opponent (Ernie) — a faithful Rust port of BTComputer/BTCBoard"

[dependencies]
bt-core = { path = "../bt-core" }

[dev-dependencies]
proptest = "1"
