[package]
name = "bt-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "BattleTris server: serves the web client + matchmaking/WebRTC-signaling/TrueSkill ratings."

[[bin]]
name = "bt-server"
path = "src/main.rs"

[dependencies]
bt-core = { path = "../bt-core" }
bt-trueskill = { path = "../bt-trueskill" }
bt-replay = { path = "../bt-replay" }
bt-identity = { path = "../bt-identity" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "signal"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Replay index/store. `bundled` compiles SQLite from source and links it
# statically, so the musl binary stays self-contained on the distroless image
# (the Dockerfile points the C build at musl-gcc). Keeps the server's only C dep
# fully static — no libsqlite3 needed at runtime.
rusqlite = { version = "0.31", features = ["bundled"] }
# Identity tokens (HS256 JWT) live in the shared `bt-identity` crate so the
# server (verify) and the bots (self-mint) speak the exact same format.
