[package]
name = "bt-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "BattleTris server: serves the web client + matchmaking/WebRTC-signaling/TrueSkill ratings."

[[bin]]
name = "bt-server"
path = "src/main.rs"

[dependencies]
bt-core = { path = "../bt-core" }
bt-trueskill = { path = "../bt-trueskill" }
bt-replay = { path = "../bt-replay" }
bt-identity = { path = "../bt-identity" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "signal"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Replay index/store. `bundled` compiles SQLite from source and links it
# statically, so the musl binary stays self-contained on the distroless image
# (the Dockerfile points the C build at musl-gcc). Keeps the server's only C dep
# fully static — no libsqlite3 needed at runtime.
rusqlite = { version = "0.31", features = ["bundled"] }
# Identity tokens (HS256 JWT) live in the shared `bt-identity` crate so the
# server (verify) and the bots (self-mint) speak the exact same format.
# Error tracking. The `ureq` transport = rustls + bundled webpki CA roots (pure
# Rust, no OpenSSL, no system certs), so it works on the static-musl / distroless
# runtime image. Inert until SENTRY_DSN is set; `panic` captures crashes.
sentry = { version = "0.34", default-features = false, features = ["backtrace", "contexts", "panic", "ureq"] }
# Metrics. Pure-Rust Prometheus client; we expose /metrics in text format for fly's
# managed Grafana to scrape (see [[metrics]] in fly.toml). No C deps.
prometheus = { version = "0.13", default-features = false }
# Tagged-UUID ids: every generated id is `<kind>-<uuid v4>` (e.g. `match-…`,
# `client-…`) — unguessable + unique across restarts. v4 = random (getrandom; works
# on the static-musl/distroless runtime).
uuid = { version = "1", features = ["v4"] }
# Replay blob storage. SQLite keeps only replay metadata; the ~12KB JSON blobs
# move to a bucket (Fly Tigris, S3-compatible) so the fly volume stops filling up.
# The "aws" feature builds `AmazonS3Builder`; tests use `object_store::memory::InMemory`,
# so the suite never touches the network.
object_store = { version = "0.14.1", features = ["aws"] }

[dev-dependencies]
proptest = "1"
# The Predictor drives a REAL client alongside the ITF-trace-driven mock server in
# the conformance harness (see `replay_itf_trace` in `src/bout.rs`), so the harness
# checks the client and server share one seq/event/resync model, not just the server.
bt-netcode = { path = "../bt-netcode" }
# Only needed to hand-implement `object_store::ObjectStore` for the test-only
# `PutAlwaysFails` wrapper (the trait's methods are `#[async_trait]`, so an impl
# has to match with the same macro).
async-trait = "0.1.91"
