[package]
name = "bt-wasm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "wasm-bindgen bindings exposing the BattleTris engine to the browser."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bt-core = { path = "../bt-core" }
bt-ai = { path = "../bt-ai" }
bt-replay = { path = "../bt-replay" }
bt-trueskill = { path = "../bt-trueskill" }
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = ["console"]
